# ELDAR

./: .gitignore  CMakeLists.txt
Files/: device_type.txt  meta_device.json
Files/DB/: resistor.db
Files/JSON/: meta_device.json
Files/TXT/: BJT.txt  LED.txt  MOSFET.txt  capacitor.txt  device_type.txt  diode.txt  inductor.txt  release_notes.txt  resistor.txt
include/: console_color.hpp  const.hpp  db_mgr.hpp  device_mgr.hpp  json_mgr.hpp  sql_cmds.hpp  table_mgr.hpp  utility.hpp
src/: db_mgr.cpp  device_mgr.cpp  json_mgr.cpp  main.cpp  sql_cmds.cpp  table_mgr.cpp  utility.cpp
